AC_PREREQ([2.69])
AC_INIT([rtems-c-src-lib-libbsp-arm-stm32f4xx],[_RTEMS_VERSION],[https://devel.rtems.org/newticket])
AC_CONFIG_SRCDIR([bsp_specs])
RTEMS_TOP(../../../../../..)

RTEMS_CANONICAL_TARGET_CPU
AM_INIT_AUTOMAKE([no-define nostdinc foreign 1.12.2])
RTEMS_BSP_CONFIGURE

RTEMS_PROG_CC_FOR_TARGET
RTEMS_CANONICALIZE_TOOLS
RTEMS_PROG_CCAS

RTEMS_CHECK_NETWORKING
AM_CONDITIONAL(HAS_NETWORKING,test "$HAS_NETWORKING" = "yes")

RTEMS_BSPOPTS_SET([STM32F4XX_FAMILY_STM32F40_41xxx],[*],[])
RTEMS_BSPOPTS_HELP([STM32F4XX_FAMILY_STM32F40_41xxx],[STM32F4 STM32F40_41xxx Family])
AM_CONDITIONAL(STM32F4XX_FAMILY_STM32F40_41xxx,test "$STM32F4XX_FAMILY_STM32F40_41xxx" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_FAMILY_STM32F429_439xx],[*],[])
RTEMS_BSPOPTS_HELP([STM32F4XX_FAMILY_STM32F429_439xx],[STM32F4 STM32F429_439xx Family])
AM_CONDITIONAL(STM32F4XX_FAMILY_STM32F429_439xx,test "$STM32F4XX_FAMILY_STM32F429_439xx" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_FAMILY_STM32F469_479xx],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F4XX_FAMILY_STM32F469_479xx],[STM32F4 STM32F469_479xx Family])
AM_CONDITIONAL(STM32F4XX_FAMILY_STM32F469_479xx,test "$STM32F4XX_FAMILY_STM32F469_479xx" = "1")
RTEMS_BSPOPTS_SET([STM32F4XX_HSE_OSCILLATOR],[*],[8000000])
##RTEMS_BSPOPTS_SET([STM32F4XX_HSE_OSCILLATOR],[*],[25000000])
RTEMS_BSPOPTS_HELP([STM32F4XX_HSE_OSCILLATOR],[HSE oscillator frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4XX_HSE_STARTUP_TIMEOUT],[*],[0x05000])
RTEMS_BSPOPTS_HELP([STM32F4XX_HSE_STARTUP_TIMEOUT],[HSE oscillator startup timeout])

RTEMS_BSPOPTS_SET([STM32F4XX_HSI_OSCILLATOR],[*],[16000000])
RTEMS_BSPOPTS_HELP([STM32F4XX_HSI_OSCILLATOR],[HSI oscillator frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_SYSCLK],[stm32f1*],[8000000])
RTEMS_BSPOPTS_SET([STM32F4_SYSCLK],[*],[180000000])
RTEMS_BSPOPTS_HELP([STM32F4_SYSCLK],[SYSCLK frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_HCLK],[stm32f1*],[8000000])
RTEMS_BSPOPTS_SET([STM32F4_HCLK],[*],[180000000])
RTEMS_BSPOPTS_HELP([STM32F4_HCLK],[HCLK frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_PCLK1],[stm32f1*],[8000000])
RTEMS_BSPOPTS_SET([STM32F4_PCLK1],[*],[45000000])
RTEMS_BSPOPTS_HELP([STM32F4_PCLK1],[PCLK1 frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_PCLK1],[stm32f1*],[8000000])
RTEMS_BSPOPTS_SET([STM32F4_PCLK2],[*],[90000000])
RTEMS_BSPOPTS_HELP([STM32F4_PCLK2],[PCLK2 frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_USART_BAUD],[*],[115200])
RTEMS_BSPOPTS_HELP([STM32F4_USART_BAUD],[baud for USARTs])

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_USART_1],[*],[])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_USART_1],[enable USART 1])
AM_CONDITIONAL(STM32F4XX_ENABLE_USART_1,test "$STM32F4XX_ENABLE_USART_1" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_USART_2],[*],[])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_USART_2],[enable USART 2])
AM_CONDITIONAL(STM32F4XX_ENABLE_USART_2,test "$STM32F4XX_ENABLE_USART_2" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_USART_3],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_USART_3],[enable USART 3])
AM_CONDITIONAL(STM32F4XX_ENABLE_USART_3,test "$STM32F4XX_ENABLE_USART_3" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_UART_4],[*],[])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_UART_4],[enable UART 4])
AM_CONDITIONAL(STM32F4XX_ENABLE_UART_4,test "$STM32F4XX_ENABLE_UART_4" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_UART_5],[*],[])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_UART_5],[enable UART 5])
AM_CONDITIONAL(STM32F4XX_ENABLE_UART_5,test "$STM32F4XX_ENABLE_UART_5" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_USART_6],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_USART_6],[enable USART 6])
AM_CONDITIONAL(STM32F4XX_ENABLE_USART_6,test "$STM32F4XX_ENABLE_USART_6" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_UART_7],[*],[])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_UART_7],[enable UART 7])
AM_CONDITIONAL(STM32F4XX_ENABLE_UART_7,test "$STM32F4XX_ENABLE_UART_7" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_UART_8],[*],[])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_UART_8],[enable UART 8])
AM_CONDITIONAL(STM32F4XX_ENABLE_UART_8,test "$STM32F4XX_ENABLE_UART_8" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_LED_1],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_LED_1],[enable lED 1])
AM_CONDITIONAL(STM32F4XX_ENABLE_LED_1,test "$STM32F4XX_ENABLE_LED_1" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_LED_2],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_LED_2],[enable lED 2])
AM_CONDITIONAL(STM32F4XX_ENABLE_LED_2,test "$STM32F4XX_ENABLE_LED_2" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_LED_3],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_LED_3],[enable lED 3])
AM_CONDITIONAL(STM32F4XX_ENABLE_LED_3,test "$STM32F4XX_ENABLE_LED_3" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_LED_4],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_LED_4],[enable lED 4])
AM_CONDITIONAL(STM32F4XX_ENABLE_LED_2,test "$STM32F4XX_ENABLE_LED_4" = "1")

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_I2C1],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_I2C1],[enable I2C 1])

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_EXTI0],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_EXTI0],[enable EXTI 0])
RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_EXTI13],[*],[])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_EXTI13],[enable EXTI 13])

RTEMS_BSPOPTS_SET([STM32F4XX_ENABLE_SPI5],[*],[])
RTEMS_BSPOPTS_HELP([STM32F4XX_ENABLE_SPI5],[enable SPI 5])



RTEMS_BSP_CLEANUP_OPTIONS(0, 0)
RTEMS_BSP_LINKCMDS

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
